[package]
name = "docker_socket_proxy"
version = "0.1.0"
authors = ["Khairulnizam Hasan <steelburn@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
bytes = "1.0"